@@ -8,10 +8,14 @@ use 5.006;
 # ABSTRACT: An extension of the File::stat module, provides additional methods.
 # VERSION
 
-=head1 SYNOPSIS
+=begin :prelude
 
 =for test_synopsis
 my ($st, $file);
+
+=end :prelude
+
+=head1 SYNOPSIS
 
   use File::stat::Extra;
 
